# COGBT

./: .gitignore  Makefile  README.md  TODO.md  configure  disas.c  meson.build  meson_options.txt  run.sh  test.c
accel/: meson.build
accel/cogbt/: README.md  cogbt.cpp  cppprint.cpp  emulator.c  helpers.symbols  host-info.cpp  meson.build  translation-unit.cpp
accel/cogbt/AOT/: aot-parser.cpp  meson.build
accel/cogbt/JIT/: jit-eventlistener.cpp  memory-manager.cpp  meson.build
accel/cogbt/include/: aot-parser.h  cogbt-debug.h  cogbt.h  emulator.h  guest-config.h  host-info.h  jit-eventlistener.h  llvm-translator.h  memory-manager.h  translation-unit.h  x86-config.h  x86-inst-handler.h  x86-inst.def  x86-opnd-handler.h  x86-translator.h
accel/cogbt/interfaces/: meson.build
accel/cogbt/interfaces/block/: block.c  block.cpp  meson.build
accel/cogbt/interfaces/function/: elf-handle.cpp  function.cpp  json-handle.cpp  meson.build
accel/cogbt/interfaces/include/: block.h  frontend.h  function.h  json-handle.h  json_function.h
accel/cogbt/interfaces/tu/: elf-handle.cpp  meson.build  tu.cpp
accel/cogbt/optimization_passes/: CMakeLists.txt
accel/cogbt/optimization_passes/andi-reduction/: CMakeLists.txt  andi-reduction.cpp
accel/cogbt/optimization_passes/flag-reduction/: CMakeLists.txt  cogbt-x86-flag.h  flag-reduction.cpp
accel/cogbt/optimization_passes/pattern/: CMakeLists.txt  cogbt-x86-flag.h  pattern-reduction.cpp
accel/cogbt/optimization_passes/sext-reduction/: CMakeLists.txt  sext-reduction.cpp
accel/cogbt/translator/: cogbt-debug.cpp  llvm-translator.cpp  meson.build
accel/cogbt/translator/X86/: meson.build  misc.cpp  x86-arith.cpp  x86-bt.cpp  x86-config.cpp  x86-cti.cpp  x86-farith.cpp  x86-fpu.cpp  x86-inst-handler.cpp  x86-jcc.cpp  x86-logic.cpp  x86-mov.cpp  x86-opnd-handler.cpp  x86-setcc.cpp  x86-simd-cvt.cpp  x86-simd.cpp  x86-string.cpp  x86-translator.cpp
accel/tcg/: cpu-exec.c  tcg-runtime.h  translate-all.c  translator.c
build-shell/: build64-dbg.sh  build64-qemu.sh  build64.sh
disas/: loongarch.c  meson.build
include/exec/: exec-all.h
include/tcg/: tcg.h
linux-user/: elfload.c  exit.c  main.c
scripts/: meson-buildoptions.py
tcg/: tcg.c
tcg/i386/: tcg-target.c.inc
tcg/loongarch64/: tcg-target.c.inc
