cogbt_ss.add(files(
  'x86-translator.cpp',
  'x86-config.cpp',
  'x86-opnd-handler.cpp',
  'x86-inst-handler.cpp',
  'x86-logic.cpp',
  'x86-arith.cpp',
  'x86-cti.cpp',
  'x86-fpu.cpp',
  'x86-mov.cpp',
  'x86-setcc.cpp',
  'x86-string.cpp',
  'x86-simd.cpp',
  'x86-simd-cvt.cpp',
  'x86-bt.cpp',
  'misc.cpp',
))
